publish: Add notice about CORS
generated from commit 2d28712cfa37340041e1699692a7edc00333481b

--- a/index.html
+++ b/index.html
@@ -439,6 +439,10 @@
 </tr>
 </tbody></table>
 <h2 id='cors'>CORS</h2>
+<aside class="warning">
+  Public API currently restricts CORS origins. This is planned to be removed
+</aside>
+
 <p>For increased user security we&#39;ve limited valid CORS origins for private API routes. Only the qtrade.io domain origin is valid for private API requests, and this means private API requests performed in a browser (ie, via javascript) will fail.</p>
 
 <p>If your app needs private API access we recommend performing your API requests on the server side. For example, if you want to display your qTrade deposit address to someone visiting your website, make the request to the deposit endpoint on the server and return that data to your client in your HTTP response.</p>
