publish: Javascript -> Node.js
generated from commit f77879d60fcdcf60566fdd0811c2ec5082441a9b

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <img src="images/logo.png" class="logo" alt="Logo" />
         <div class="lang-selector">
               <a href="#" data-language-name="python">python</a>
-              <a href="#" data-language-name="javascript">javascript</a>
+              <a href="#" data-language-name="javascript">Node.js</a>
               <a href="#" data-language-name="php">php</a>
         </div>
         <div class="search">
@@ -1936,7 +1936,7 @@ Successful cancellation returns just a 200 with no payload
       <div class="dark-box">
           <div class="lang-selector">
                 <a href="#" data-language-name="python">python</a>
-                <a href="#" data-language-name="javascript">javascript</a>
+                <a href="#" data-language-name="javascript">Node.js</a>
                 <a href="#" data-language-name="php">php</a>
           </div>
       </div>
