publish: Fix typo
generated from commit 5a1e265285ca80f5c2a1b7725d59efe24997c298

--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
     </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>Returns the currently available <code>base_currency</code> and <code>markey_currency</code>  balances for a user on the given market. These amounts do <strong>not</strong> include amounts currently represented in open orders, pending deposits or withdraws.</p>
+<p>Returns the currently available <code>base_currency</code> and <code>market_currency</code>  balances for a user on the given market. These amounts do <strong>not</strong> include amounts currently represented in open orders, pending deposits or withdraws.</p>
 
 <p>Also returns lists of <code>open_orders</code> and <code>closed_orders</code></p>
 <h3 id='path-variables-7'>Path variables</h3>
