publish: Tweak README.md
generated from commit 07b1cbf699e6181f7888eb9e1837b4085df9921c

--- a/index.html
+++ b/index.html
@@ -220,113 +220,113 @@
           <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
         <ul class="search-results"></ul>
-      <div id="toc" class="toc-list-h1">
+      <ul id="toc" class="toc-list-h1">
           <li>
-            <a href="#introduction" class="toc-h1 toc-link" data-title="introduction">Introduction</a>
+            <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
           </li>
           <li>
-            <a href="#authentication" class="toc-h1 toc-link" data-title="authentication">Authentication</a>
+            <a href="#authentication" class="toc-h1 toc-link" data-title="Authentication">Authentication</a>
           </li>
           <li>
-            <a href="#public" class="toc-h1 toc-link" data-title="public">Public</a>
+            <a href="#public" class="toc-h1 toc-link" data-title="Public">Public</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#ticker" class="toc-h2 toc-link" data-title="ticker">Ticker</a>
+                    <a href="#ticker" class="toc-h2 toc-link" data-title="Ticker">Ticker</a>
                   </li>
                   <li>
-                    <a href="#all-tickers" class="toc-h2 toc-link" data-title="all-tickers">All Tickers</a>
+                    <a href="#all-tickers" class="toc-h2 toc-link" data-title="All Tickers">All Tickers</a>
                   </li>
                   <li>
-                    <a href="#currency" class="toc-h2 toc-link" data-title="currency">Currency</a>
+                    <a href="#currency" class="toc-h2 toc-link" data-title="Currency">Currency</a>
                   </li>
                   <li>
-                    <a href="#all-currencies" class="toc-h2 toc-link" data-title="all-currencies">All Currencies</a>
+                    <a href="#all-currencies" class="toc-h2 toc-link" data-title="All Currencies">All Currencies</a>
                   </li>
                   <li>
-                    <a href="#market" class="toc-h2 toc-link" data-title="market">Market</a>
+                    <a href="#market" class="toc-h2 toc-link" data-title="Market">Market</a>
                   </li>
                   <li>
-                    <a href="#all-markets" class="toc-h2 toc-link" data-title="all-markets">All Markets</a>
+                    <a href="#all-markets" class="toc-h2 toc-link" data-title="All Markets">All Markets</a>
                   </li>
                   <li>
-                    <a href="#market-trades" class="toc-h2 toc-link" data-title="market-trades">Market Trades</a>
+                    <a href="#market-trades" class="toc-h2 toc-link" data-title="Market Trades">Market Trades</a>
                   </li>
                   <li>
-                    <a href="#market-orderbook" class="toc-h2 toc-link" data-title="market-orderbook">Market Orderbook</a>
+                    <a href="#market-orderbook" class="toc-h2 toc-link" data-title="Market Orderbook">Market Orderbook</a>
                   </li>
                   <li>
-                    <a href="#ohlcv" class="toc-h2 toc-link" data-title="ohlcv">OHLCV</a>
+                    <a href="#ohlcv" class="toc-h2 toc-link" data-title="OHLCV">OHLCV</a>
                   </li>
               </ul>
           </li>
           <li>
-            <a href="#private" class="toc-h1 toc-link" data-title="private">Private</a>
+            <a href="#private" class="toc-h1 toc-link" data-title="Private">Private</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#user-info" class="toc-h2 toc-link" data-title="user-info">User Info</a>
+                    <a href="#user-info" class="toc-h2 toc-link" data-title="User Info">User Info</a>
                   </li>
                   <li>
-                    <a href="#balances" class="toc-h2 toc-link" data-title="balances">Balances</a>
+                    <a href="#balances" class="toc-h2 toc-link" data-title="Balances">Balances</a>
                   </li>
                   <li>
-                    <a href="#user-market-view" class="toc-h2 toc-link" data-title="user-market-view">User Market View</a>
+                    <a href="#user-market-view" class="toc-h2 toc-link" data-title="User Market View">User Market View</a>
                   </li>
                   <li>
-                    <a href="#get-orders" class="toc-h2 toc-link" data-title="get-orders">Get Orders</a>
+                    <a href="#get-orders" class="toc-h2 toc-link" data-title="Get Orders">Get Orders</a>
                   </li>
                   <li>
-                    <a href="#order-details" class="toc-h2 toc-link" data-title="order-details">Order Details</a>
+                    <a href="#order-details" class="toc-h2 toc-link" data-title="Order Details">Order Details</a>
                   </li>
                   <li>
-                    <a href="#cancel-order" class="toc-h2 toc-link" data-title="cancel-order">Cancel Order</a>
+                    <a href="#cancel-order" class="toc-h2 toc-link" data-title="Cancel Order">Cancel Order</a>
                   </li>
                   <li>
-                    <a href="#withdraw-details" class="toc-h2 toc-link" data-title="withdraw-details">Withdraw Details</a>
+                    <a href="#withdraw-details" class="toc-h2 toc-link" data-title="Withdraw Details">Withdraw Details</a>
                   </li>
                   <li>
-                    <a href="#withdraw-history" class="toc-h2 toc-link" data-title="withdraw-history">Withdraw History</a>
+                    <a href="#withdraw-history" class="toc-h2 toc-link" data-title="Withdraw History">Withdraw History</a>
                   </li>
                   <li>
-                    <a href="#deposit-details" class="toc-h2 toc-link" data-title="deposit-details">Deposit Details</a>
+                    <a href="#deposit-details" class="toc-h2 toc-link" data-title="Deposit Details">Deposit Details</a>
                   </li>
                   <li>
-                    <a href="#deposit-history" class="toc-h2 toc-link" data-title="deposit-history">Deposit History</a>
+                    <a href="#deposit-history" class="toc-h2 toc-link" data-title="Deposit History">Deposit History</a>
                   </li>
                   <li>
-                    <a href="#transfers" class="toc-h2 toc-link" data-title="transfers">Transfers</a>
+                    <a href="#transfers" class="toc-h2 toc-link" data-title="Transfers">Transfers</a>
                   </li>
                   <li>
-                    <a href="#create-a-withdraw" class="toc-h2 toc-link" data-title="create-a-withdraw">Create a Withdraw</a>
+                    <a href="#create-a-withdraw" class="toc-h2 toc-link" data-title="Create a Withdraw">Create a Withdraw</a>
                   </li>
                   <li>
-                    <a href="#get-deposit-address" class="toc-h2 toc-link" data-title="get-deposit-address">Get Deposit Address</a>
+                    <a href="#get-deposit-address" class="toc-h2 toc-link" data-title="Get Deposit Address">Get Deposit Address</a>
                   </li>
                   <li>
-                    <a href="#create-sell-limit" class="toc-h2 toc-link" data-title="create-sell-limit">Create Sell Limit</a>
+                    <a href="#create-sell-limit" class="toc-h2 toc-link" data-title="Create Sell Limit">Create Sell Limit</a>
                   </li>
                   <li>
-                    <a href="#create-buy-limit" class="toc-h2 toc-link" data-title="create-buy-limit">Create Buy Limit</a>
+                    <a href="#create-buy-limit" class="toc-h2 toc-link" data-title="Create Buy Limit">Create Buy Limit</a>
                   </li>
               </ul>
           </li>
           <li>
-            <a href="#rate-limits" class="toc-h1 toc-link" data-title="rate-limits">Rate Limits</a>
+            <a href="#rate-limits" class="toc-h1 toc-link" data-title="Rate Limits">Rate Limits</a>
           </li>
           <li>
-            <a href="#cors" class="toc-h1 toc-link" data-title="cors">CORS</a>
+            <a href="#cors" class="toc-h1 toc-link" data-title="CORS">CORS</a>
           </li>
           <li>
-            <a href="#postman-collection" class="toc-h1 toc-link" data-title="postman-collection">Postman Collection</a>
+            <a href="#postman-collection" class="toc-h1 toc-link" data-title="Postman Collection">Postman Collection</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#get-the-collection-and-environment" class="toc-h2 toc-link" data-title="get-the-a-href-postman-json-collection-a-and-a-href-postman_environment-json-environment-a">Get the <a href="postman.json">Collection</a> and <a href="postman_environment.json">Environment</a></a>
+                    <a href="#get-the-collection-and-environment" class="toc-h2 toc-link" data-title="Get the Collection and Environment">Get the <a href="postman.json">Collection</a> and <a href="postman_environment.json">Environment</a></a>
                   </li>
               </ul>
           </li>
           <li>
-            <a href="#errors" class="toc-h1 toc-link" data-title="errors">Errors</a>
+            <a href="#errors" class="toc-h1 toc-link" data-title="Errors">Errors</a>
           </li>
-      </div>
+      </ul>
         <ul class="toc-footer">
             <li><a href='https://github.com/lord/slate'>Documentation Powered by Slate</a></li>
         </ul>
