--- a/index.html
+++ b/index.html
@@ -777,6 +777,42 @@
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <p>Return details about a specific market including info about fees, user permissions/market state and the most recent 200 trades.</p>
+
+<table><thead>
+<tr>
+<th>key</th>
+<th>desc</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>maker_fee</td>
+<td>The percentage fee taken on the trade value of maker orders</td>
+</tr>
+<tr>
+<td>taker_fee</td>
+<td>The percentage fee taken on the trade value on taker orders</td>
+</tr>
+<tr>
+<td>id</td>
+<td>A globally unique market identifier as an integer</td>
+</tr>
+<tr>
+<td>metadata</td>
+<td>Frontend rendering parameters</td>
+</tr>
+<tr>
+<td>can_trade</td>
+<td>true if trading and order creation is disabled</td>
+</tr>
+<tr>
+<td>base_currency</td>
+<td>The currency that orders are priced in</td>
+</tr>
+<tr>
+<td>market_currency</td>
+<td>The currency that is bought or sold</td>
+</tr>
+</tbody></table>
 <h3 id='path-variables-3'>Path variables</h3>
 <table><thead>
 <tr>
